Show error if PIN/PUK unlock fails.

BUG: 251214
FIXED-IN: nm09 branch / KDE 4.7.0